# SourceRes

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
mod/addons/: SourceRes.vdf
src/: SourceRes.cpp  SourceRes.h  SourceRes_Config.h.in
